--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "etalones-admin-panel",
+  "name": "Etalonesnext14dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ws": "node websocketServer.js"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@next/eslint-plugin-next": "14.0.1",
+    "axios": "^1.6.8",
+    "bcrypt": "5.1.1",
+    "country-state-city": "^3.2.1",
+    "dotenv": "^16.4.5",
+    "isomorphic-ws": "^5.0.0",
+    "mongoose": "8.0.0",
+    "next": "14.0.1",
+    "next-auth": "^5.0.0-beta.3",
+    "react": "18",
+    "react-daisyui": "^5.0.0",
+    "react-dom": "18",
+    "react-icons": "4.11.0",
+    "react-select": "^5.8.0",
+    "recharts": "2.9.0",
+    "use-debounce": "9.0.4",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "@types/react": "18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "autoprefixer": "^10.4.19",
+    "eslint": "8",
+    "eslint-config-next": "14.0.1",
+    "tailwindcss": "^3.4.3"
   }
 }
