--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "ws": "node websocketServer.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@next/eslint-plugin-next": "14.0.1",
     "axios": "^1.6.8",
     "bcrypt": "5.1.1",
+    "bcryptjs": "^2.4.3",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "isomorphic-ws": "^5.0.0",
@@ -26,7 +28,8 @@
     "react-select": "^5.8.0",
     "recharts": "2.9.0",
     "use-debounce": "9.0.4",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/react": "18.2.74",
