--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "country-state-city": "^3.2.1",
     "dotenv": "^16.4.5",
     "isomorphic-ws": "^5.0.0",
-    "mongoose": "8.0.0",
+    "mongoose": "8.4.0",
     "next": "14.0.1",
     "npx": "^10.2.2",
     "react": "18",
@@ -33,6 +33,7 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/node": "20.12.12",
     "@types/react": "18.2.74",
     "@types/react-dom": "^18.2.24",
     "autoprefixer": "^10.4.19",
