--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "8.4.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.7",
     "npx": "^10.2.2",
     "react": "18",
     "react-country-state-city": "^1.1.0",
