--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "18",
     "react-icons": "4.11.0",
+    "react-intersection-observer": "^9.13.0",
     "react-multi-select-component": "^4.3.4",
     "react-select": "^5.8.0",
     "recharts": "2.9.0",
