--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/ui/dashboard/FormCandidate/FormCandidate.jsx", "app/api/upload-mongo-image/route.js", "app/ui/dashboard/FormVacancy/FormVacancy.jsx", "app/dashboard/vacancy/add/page.jsx", "app/dashboard/tasks/page.jsx",  ],
+, "app/ui/dashboard/FormCandidate/FormCandidate.jsx", "app/api/upload-mongo-image/route.js", "app/ui/dashboard/FormVacancy/FormVacancy.jsx", "app/dashboard/vacancy/add/page.jsx", "app/dashboard/tasks/page.jsx", "app/api/auth/[...nextauth]/route.js",  ],
   "exclude": [
     "node_modules"
   ]
