--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-select": "^5.8.0",
     "recharts": "2.9.0",
     "use-debounce": "9.0.4",
+    "web-push": "^3.6.7",
     "ws": "^8.16.0",
     "zod": "^3.23.4"
   },
